--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,16 +15,16 @@ p {
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: #af4c4c;
     border: none;
     border-radius: 15px;
     box-shadow: 0 3px #999;
   }
   
-  .button:hover {background-color: #3e8e41}
+  .button:hover {background-color: #803232}
   
   .button:active {
-    background-color: #3e8e41;
+    background-color: #af4c4c;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
   }
