--- a/src/components/table.css
+++ b/src/components/table.css
@@ -23,6 +23,6 @@ tfoot td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #af4c4c;
   color: white;
 }
