--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,3 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
-
 p {
     padding-left: 10px;
     padding-right: 10px;
@@ -110,6 +108,8 @@ padding-right: 10px;
 }
 #divButton {
   text-align: end;
+  margin-top: -2.9%;
+  margin-right: -1%;
 }
 
 /* Botão enviar modal */
@@ -130,6 +130,11 @@ padding-right: 10px;
   font-size: 15px;
 }
 
+/* scroll da tabel */
 #scrollTable{
   overflow-x: scroll;
+}
+
+#tabelaModal{
+  margin-top: 1%;
 }
