--- a/src/components/table.css
+++ b/src/components/table.css
@@ -2,7 +2,15 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+
 }
+
+/* input {
+  font-size: 1rem;
+  padding: 0;
+  margin: 0;
+  border: 0;
+} */
 
 table td,
 table th {
@@ -18,6 +26,22 @@ table tr:hover {
   background-color: #ddd;
 }
 
+tfoot {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #af4c4c;
+  color: white;
+}
+
+thead {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #af4c4c;
+  color: white;
+}
+
 table th,
 tfoot td {
   padding-top: 12px;
@@ -25,4 +49,35 @@ tfoot td {
   text-align: center;
   background-color: #af4c4c;
   color: white;
+}
+
+.botesRotas {
+  display: inline-block;
+  padding: 10px 12px;
+  padding-left: 10px;
+  margin-left: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #af4c4c;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 3px #999;
+}
+
+.botesRotas:hover {background-color: #803232}
+.botesRotas:active {
+  background-color: #af4c4c;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.botesRotas:disabled{
+  background-color: #666;
+}
+
+.textoRetorno {
+  text-align: center;
 }
